fixed weird bug